k8s/nextjs/deployment-nextjs-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-carcenter-erding-staging
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-carcenter-erding-staging
  template:
    metadata:
      labels:
        app: next-carcenter-erding-staging
    spec:
      containers:
      - name: nextjs
        image: devrico003/next-carcenter-erding-k8s:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/up
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/up
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
