k8s/nextjs/deployment-nextjs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-carcenter-erding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-carcenter-erding
  template:
    metadata:
      labels:
        app: next-carcenter-erding
    spec:
      containers:
        - name: nextjs
          image: devrico003/next-carcenter-erding-k8s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
