k8s/nextjs/service-nextjs-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service-staging 
  namespace: staging
spec:
  selector:
    app: next-carcenter-erding-staging 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3000 
  type: ClusterIP
