k8s/nextjs/service-nextjs.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  selector:
    app: next-carcenter-erding
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
